<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P0341_SimpleSQLite</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id">ID</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="add">Add</string>
    <string name="read">Read</string>
    <string name="clear">Clear</string>

</resources>
